# aoc2021

./: .clang-format  .editorconfig  .gitignore  Cargo.toml  day1.c  day16_1.c  day1_1.c  day1_2.c  day2.c  day2_1.c  day2_2.c  day3_1.c  day3_2.c  day9_1.c  day9_2.c  defs.h  io.c  io.h  meson.build  result.txt  text.c  text.h  util.c  util.h
common/: arena.c  arena.h  io.c  io.h  text.c  text.h
src/: day1.rs
