project('aoc2021', 'c',
  version : '0.1',
  default_options : ['warning_level=3'])

util = library('util', 'util.c')


executable('day1_1',
           'day1_1.c', link_with: util)


executable('day1_2',
           'day1_2.c', link_with: util)

executable('day2',
           'day2.c', link_with: util)

