project('aoc2021', 'c',
  version : '0.1',
  default_options : ['warning_level=3'])

util = library('util', 'io.c')


executable('day1_1',
           'day1_1.c', link_with: util)

executable('day1_2',
           'day1_2.c', link_with: util)

executable('day2_1',
           'day2_1.c', link_with: util)

executable('day2_2',
           'day2_2.c', link_with: util)

executable('day3_1',
           'day3_1.c', link_with: util)

executable('day3_2',
           'day3_2.c', link_with: util)

executable('day9_1', 
           'day9_1.c', link_with: util)

executable('day9_2', 
           'day9_2.c', link_with: util)