project('aoc2021', 'c',
  version : '0.1',
  default_options : ['warning_level=3'])

common = library('common', 'common/io.c', 'common/text.c')


executable('day1_1',
           'day1_1.c', link_with: common)

executable('day1_2',
           'day1_2.c', link_with: common)

executable('day2_1',
           'day2_1.c', link_with: common)

executable('day2_2',
           'day2_2.c', link_with: common)

executable('day3_1',
           'day3_1.c', link_with: common)

executable('day3_2',
           'day3_2.c', link_with: common)

executable('day9_1', 
           'day9_1.c', link_with: common)

executable('day9_2', 
           'day9_2.c', link_with: common)

executable('day16_1',
           'day16_1.c', link_with: common)